# scma-gcal-sync

./: .gitattributes  Cargo.toml  PRIVACY.adoc  README.adoc  RELEASE.adoc  dist-workspace.toml
.github/workflows/: ci.yml  personal-calendar-sync.yml  personal-contacts-sync.yml  release.yml  shared-calendar-sync.yml  sync-events.yml  sync.yml
docs/: admin-guide.adoc  examples.adoc  user-guide.adoc
src/: lib.rs  main.rs  model.rs
src/input/: mod.rs  web.rs
src/input/snapshots/: scma_gcal_rs__input__web__test__parse_event.snap  scma_gcal_rs__input__web__test__parse_event_list_page.snap  scma_gcal_sync__input__web__test__parse_event.snap  scma_gcal_sync__input__web__test__parse_event_list_json.snap  scma_gcal_sync__input__web__test__parse_users.snap  scma_gsync__input__web__test__normalize_phone_number.snap  scma_gsync__input__web__test__parse_users.snap
src/output/: gauth.rs  gcal.rs  gppl.rs  mod.rs
test/inputs/: event-527.html  events-list.html  events-list.json  users.html  users.json
