[package]
name = "scma-gcal-sync"
version = "2.2.0"
edition = "2021"
authors = ["Rob Donnelly <rfdonnelly@gmail.com>"]
description = "Synchronizes Southern California Mountaineers Association (SCMA) calendar events to Google Calendar"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rfdonnelly/scma-gcal-sync"

[profile.release]
strip = true
# Optimize for size
opt-level = "z"
lto = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
reqwest = { version = "0.11", default-features = false, features = ["cookies", "rustls-tls"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
select = "0.6"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["clock", "serde"], default-features = false }
tap = "1"
# Needs to match the version used by google-calendar3 and google-people1
yup-oauth2 = "7"
google-calendar3 = "4"
hyper = "0.14"
hyper-rustls = "0.23"
serde_json = "1"
html-escape = "0.2"
google-people1 = "4"
indexmap = "1"
anyhow = "1"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
