[package]
name = "scma-gcal-sync"
version = "2.3.0"
edition = "2021"
authors = ["Rob Donnelly <rfdonnelly@gmail.com>"]
description = "Synchronizes Southern California Mountaineers Association (SCMA) calendar events to Google Calendar"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rfdonnelly/scma-gcal-sync"

[profile.release]
strip = true
# Optimize for size
opt-level = "z"
lto = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
reqwest = { version = "0.12", default-features = false, features = ["cookies", "rustls-tls"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
select = "0.6"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["clock", "serde"], default-features = false }
tap = "1"
# Needs to match the version used by google-calendar3 and google-people1
yup-oauth2 = "11"
google-calendar3 = "6"
google-people1 = "6"
hyper = "1"
hyper-rustls = "0.27"
hyper-util = { version = "0.1", features = ["client-legacy"] }
serde_json = "1"
html-escape = "0.2"
indexmap = "2"
anyhow = "1"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.3.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
